Various tweaks throughout. More details in future commits.

--- a/stylesheets/css/footer.css
+++ b/stylesheets/css/footer.css
@@ -2,9 +2,9 @@
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
 #page_footer{padding-top:30px;padding-bottom:30px;color:#f0eceb;}#page_footer a{color:#fefafa;}
-#page_footer h3{font-weight:bold;font-size:13px;margin-bottom:5px;line-height:15px;color:#f0eceb;font-family:'ff-dagny-web-pro-1','ff-dagny-web-pro-2','Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;}
+#page_footer h3{font-weight:bold;font-size:13px;margin-bottom:5px;line-height:15px;color:#f0eceb;font-family:"news-gothic-std-1","news-gothic-std-2",'ff-dagny-web-pro-1','ff-dagny-web-pro-2','Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;}
 #page_footer .recent_comments dd{font-size:11px;}
-#page_footer .widget{float:left;margin-right:20px;width:190px;margin-bottom:45px;font-family:'ff-meta-serif-web-pro-1','ff-meta-serif-web-pro-2',Georgia,"Times New Roman",Times,serif;}
+#page_footer .widget{float:left;margin-right:20px;width:190px;margin-bottom:45px;font-family:"adrianne-1","adrianne-2",'ff-meta-serif-web-pro-1','ff-meta-serif-web-pro-2',Georgia,"Times New Roman",Times,serif;}
 #page_footer .widget:nth-child(4n+1){width:330px;clear:left;}
 #page_footer .widget:nth-child(4n){margin-right:0;}
 #page_heel{padding:15px 0;color:#fefafa;}#page_heel p,#page_heel ul,#page_heel li,#page_heel a{font-size:10px;}
