--- a/stylesheets/css/global.css
+++ b/stylesheets/css/global.css
@@ -1,13 +1,15 @@
 -webkit-font-smoothing:antialiased;.reset-dimensions{margin:0;padding:0;}
 .incomplete{background-color:rgba(255, 0, 255, 0);}
 .show-bounds{background-color:rgba(255, 255, 0, 0.5);}
+::selection{background:#5d504f none repeat;color:#fefafa;}
+::-moz-selection{background:#5d504f none;color:#fefafa;}
 img{-ms-interpolation-mode:bicubic;}
 p img:first-child{margin-top:-5px;margin-bottom:5px;}
 table{border-collapse:separate;border-spacing:0;font-size:12px;margin:20px 0;}
 table,td,th{vertical-align:middle;}
 th,td{text-align:left;font-weight:normal;padding:0 5px;}
 th{border-bottom:1px solid;font-weight:bold;}
-body{font-size:62.5%;font-family:'ff-dagny-web-pro-1','ff-dagny-web-pro-2','Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;background-color:#3d302f;color:#050000;height:100%;margin:0;padding:0;line-height:15px;padding-bottom:60px;}
+body{font-size:62.5%;font-family:"news-gothic-std-1","news-gothic-std-2",'ff-dagny-web-pro-1','ff-dagny-web-pro-2','Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;background-color:#3d302f;color:#050000;height:100%;margin:0;padding:0;line-height:15px;padding-bottom:60px;}
 #page_top{background:#fefafa;}
 #page_bottom{background:#5d504f;}
 #page_heel{background:#3d302f;}
@@ -26,8 +28,8 @@ h4{font-size:16px;padding-top:0px;margin-bottom:15px;}
 h5{font-size:14px;padding-top:0px;margin-bottom:15px;}
 h6{font-size:12px;padding-top:0px;margin:15px 0;}
 header h2{font-size:13px;}
-blockquote{margin:15px 0px;padding:0;font-size:17px;line-height:30px;color:#5d504f;}blockquote blockquote{margin-top:0;}
-blockquote p{font-size:17px;line-height:30px;}
+blockquote{margin:15px 0px;padding:0;font-size:18px;line-height:30px;color:#5d504f;}blockquote blockquote{margin-top:0;}
+blockquote p{font-size:18px;line-height:30px;}
 blockquote cite{font-size:12px;}
 blockquote cite:before{content:"— ";}
 blockquote:before,blockquote:after,q:before,q:after{content:"";}
@@ -61,18 +63,15 @@ hr{height:1px;border:0;margin:15px 0;padding:0;background-color:#b5aaa9;}
 .post .metadata li.last{margin-right:0;}
 #content.single article header,#content.page article header,#content.archive article header{margin-bottom:15px;}#content.single article header h1,#content.page article header h1,#content.archive article header h1{font-size:28px;line-height:30px;margin-top:-6px;padding-bottom:0;margin-bottom:0;}#content.single article header h1 .iconic,#content.page article header h1 .iconic,#content.archive article header h1 .iconic{color:#5d504f;padding-right:10px;}
 #content.single article header h2,#content.page article header h2,#content.archive article header h2{margin-top:0;font-size:11px;}
-#content.single article section,#content.page article section,#content.archive article section{margin-bottom:15px;}#content.single article section p,#content.page article section p,#content.archive article section p{font-size:17px;font-family:'ff-meta-serif-web-pro-1','ff-meta-serif-web-pro-2',Georgia,"Times New Roman",Times,serif;line-height:30px;}
+#content.single article section,#content.page article section,#content.archive article section{margin-bottom:15px;}#content.single article section p,#content.page article section p,#content.archive article section p{font-size:17px;font-family:"adrianne-1","adrianne-2",'ff-meta-serif-web-pro-1','ff-meta-serif-web-pro-2',Georgia,"Times New Roman",Times,serif;line-height:30px;}
 .pagination{margin:15px 0;}.pagination .next a,.pagination .previous a{display:block;text-decoration:none;background:#f0eceb;padding:4px 6px 3px 6px;color:#050000;border-radius:2px;margin-top:15px;font-size:14px;line-height:20px;}
 .pagination .next a:hover,.pagination .previous a:hover{background:#5d504f;color:#fefafa;}
 .pagination .previous{text-align:right;}
 .page-links{margin:15px 0 20px 0;padding:5px 0;word-spacing:5px;}.page-links a{padding:4px 8px;-moz-box-shadow:1px 1px 0px #3d302f;-webkit-box-shadow:1px 1px 0px #3d302f;box-shadow:1px 1px 0px #3d302f;text-decoration:none;word-spacing:0;}
 .page-links a:hover{background:#5d504f;color:#fefafa;-moz-box-shadow:1px 1px 1px #050000;-webkit-box-shadow:1px 1px 1px #050000;box-shadow:1px 1px 1px #050000;}
-.button{padding:3px 6px 3px 6px;font-weight:bold;font-family:'ff-dagny-web-pro-1','ff-dagny-web-pro-2','Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;font-size:11px;display:inline-block;text-decoration:none;-moz-box-shadow:1px 1px 0px #3d302f;-webkit-box-shadow:1px 1px 0px #3d302f;box-shadow:1px 1px 0px #3d302f;}
+.button{padding:3px 6px;font-weight:bold;font-family:"news-gothic-std-1","news-gothic-std-2",'ff-dagny-web-pro-1','ff-dagny-web-pro-2','Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;font-size:11px;display:inline-block;text-decoration:none;-moz-box-shadow:1px 1px 0px #3d302f;-webkit-box-shadow:1px 1px 0px #3d302f;box-shadow:1px 1px 0px #3d302f;}
 a.button:hover{background:#5d504f;color:#fefafa;-moz-box-shadow:1px 1px 1px #050000;-webkit-box-shadow:1px 1px 1px #050000;box-shadow:1px 1px 1px #050000;}
 .button.light{-moz-box-shadow:1px 1px 0px #f0eceb;-webkit-box-shadow:1px 1px 0px #f0eceb;box-shadow:1px 1px 0px #f0eceb;}
 .button.light:hover{background:#f0eceb;color:#5d504f !important;-moz-box-shadow:1px 1px 1px #3d302f;-webkit-box-shadow:1px 1px 1px #3d302f;box-shadow:1px 1px 1px #3d302f;}
-.button-alt{-moz-box-shadow:0px 0px 6px rgba(18, 7, 6, 0.4);-webkit-box-shadow:0px 0px 6px rgba(18, 7, 6, 0.4);box-shadow:0px 0px 6px rgba(18, 7, 6, 0.4);background-color:#f0eceb;display:inline-block;font-family:'ff-meta-serif-web-pro-1','ff-meta-serif-web-pro-2',Georgia,"Times New Roman",Times,serif;font-style:italic;color:#5d504f !important;position:relative;text-decoration:none;}
+.button-alt{-moz-box-shadow:0px 0px 6px rgba(18, 7, 6, 0.4);-webkit-box-shadow:0px 0px 6px rgba(18, 7, 6, 0.4);box-shadow:0px 0px 6px rgba(18, 7, 6, 0.4);background-color:#f0eceb;display:inline-block;font-family:"adrianne-1","adrianne-2",'ff-meta-serif-web-pro-1','ff-meta-serif-web-pro-2',Georgia,"Times New Roman",Times,serif;font-style:italic;color:#5d504f !important;position:relative;text-decoration:none;}
 .button-alt:hover{-moz-box-shadow:0px 2px 8px rgba(18, 7, 6, 0.5);-webkit-box-shadow:0px 2px 8px rgba(18, 7, 6, 0.5);box-shadow:0px 2px 8px rgba(18, 7, 6, 0.5);background-color:#fefafa;}
-::selection{background:#5d504f none repeat;color:#fefafa;}
-::-moz-selection{background:#5d504f none;color:#fefafa;}
-.time.iconic time,.comments.iconic a{font-family:'ff-dagny-web-pro-1','ff-dagny-web-pro-2','Helvetica Neue',Arial,Helvetica,Geneva,sans-serif;padding-left:5px;}
