--- a/stylesheets/less/header.less
+++ b/stylesheets/less/header.less
@@ -2,6 +2,7 @@
 
 
 #page_header { 
+	border-bottom:1px dotted @color_midtone;
 	position: relative;
 	h1 {
 		font-size:16px;
@@ -15,57 +16,11 @@
 		margin-top: 0px; 
 	}
 	
-	#search {
-		float:right;
-		margin-right:-20px;
-		position:relative;
-		#search_button {
-			position:relative;
-			background:@color_midtone;
-			width:20px;
-			height:15px;
-			color:@color_highlight;
-			cursor:pointer;
-			padding:0;
-			
-			.iconic {
-				font-size:17px;
-				position:absolute;
-				top:2px;
-				left:4px;
-				font-style:normal;
-				font-weight:normal;
-			}
-			.label {
-				display:none;
-			}
-		}
-		#search_form {
-			position: absolute;
-			width: 210px;
-			height: 0;
-			right: 0px;
-			background: rgba(93,80,79,.9);
-			display:block;
-			overflow:hidden;
-		}
-		#s {
-			margin:5px;
-			width: 195px;
-		}
-	}
-	
-	#search.active {
-		#search_form {
-			display:block;
-			height: 30px;
-		}
-	}
-	
 	nav {
 		display:block;
+		float:left;
+		width:750px;
 		padding-bottom:5px;
-		border-bottom:1px dotted @color_midtone;
 		margin-bottom:5px;
 		.menu ul {
 			float: left;
@@ -102,6 +57,12 @@
 			}
 		}	
 	}
+}
+
+#search {
+	float:right;
+	#search_button { display:none; }
+	#search_form input { width:190px; font-size:11px; }
 }
 
 #sub_header {
