--- a/stylesheets/less/srd.less
+++ b/stylesheets/less/srd.less
@@ -1,25 +1,72 @@
 @import "variables";
 
-#page_header { 
+#search {
+	float:right;
+	margin-right:-20px;
+	position:relative;
+	#search_button {
+		position:relative;
+		background:@color_midtone;
+		width:20px;
+		height:15px;
+		color:@color_highlight;
+		cursor:pointer;
+		padding:0;
+		
+		.iconic {
+			font-size:17px;
+			position:absolute;
+			top:2px;
+			left:4px;
+			font-style:normal;
+			font-weight:normal;
+		}
+		.label {
+			display:none;
+		}
+	}
+	#search_form {
+		position: absolute;
+		width: 210px;
+		height: 0;
+		right: 0px;
+		background: rgba(93,80,79,.9);
+		display:block;
+		overflow:hidden;
+	}
+	#s {
+		margin:5px;
+		width: 195px;
+	}
+}
 
+#search.active {
+	#search_form {
+		display:block;
+		height: 30px;
+	}
+}
+
+
+#page_header { 
+	border:none;
 	h1 {  
 		.reset-dimensions;
 		margin-left: -20px;
 		float:left;
-		
 		a {
-			text-decoration: none;	
-			color: @color_highlight;
-			font-size:11px;
-			line-height:@row-height;
+			display: block;
 			width: 120px;
 			height:@row-height;
-			display: block;
+			font-size:11px;
 			font-weight:bold;
+			line-height:@row-height;
 			padding-left:20px;
-			.sprite-background(-3px, -100px);
+			text-decoration: none;
+			text-indent: -9999px;	
 			background-color: @color_dark;
-			text-indent: -9999px;
+			color: @color_highlight;
+			.sprite-background(-3px, -100px);
 		}
 		a:hover { background-color: @color_accent; }
 	}
@@ -32,41 +79,41 @@
 		background:@color_midtone;
 		.menu {
 			.reset-dimensions;
-		}
-		.menu ul {
-			float: left;
-			list-style: none;
-			.reset-dimensions;
-			display:block;
-			width:820px;
 			ul {
-				display:none;
-			}
-			li {
 				float: left;
-				margin-right: 20px;
-				background: none;
-				padding: 0;
-				a {
-					display: block;
-					text-decoration: none;
-					font-weight: bold;
-					height:(@row-height);
-					color: @color_highlight;
-					font-size: 11px;
-					padding-top: 0px;
-					width:44px;
-					padding:0 3px;
+				list-style: none;
+				.reset-dimensions;
+				display:block;
+				width:820px;
+				ul {
+					display:none;
 				}
-				a:hover {
-					color:@color_highlight;
-					background:@color_dark;
+				li {
+					float: left;
+					margin-right: 20px;
+					background: none;
+					padding: 0;
+					a {
+						display: block;
+						text-decoration: none;
+						font-weight: bold;
+						height:(@row-height);
+						color: @color_highlight;
+						font-size: 11px;
+						width:44px;
+						padding:0 3px;
+					}
+					a:hover {
+						color:@color_highlight;
+						background:@color_dark;
+					}
 				}
-			}
-			li.last {
-				margin-right: 0;
+				li.last {
+					margin-right: 0;
+				}
 			}
 		}
+		/*follow link - TODO: better semantic setup*/
 		#menu-item-217 {
 			position:relative;
 			float:right;
@@ -173,7 +220,6 @@
 
 		#work_pullout {
 			height:0;
-			
 			width: 960px !important;
 			position: absolute;
 			background: rgba(93,80,79,.95);
@@ -242,7 +288,6 @@
 			height:150px;
 		}
 		
-		
 		#categories_pullout {
 			height:0;
 			width: 960px !important;
@@ -304,9 +349,6 @@
 		.ajax_insert.expanded #categories_pullout {
 			
 		}
-		
-		
-
 		nav {
 			.menu ul {
 				li {
@@ -322,17 +364,8 @@
 	
 }
 
-#sub_header {
-	#subheader_webbynode_promo {
-		display:block;
-		width:100px;
-		height:20px;
-		text-indent:-9999px;
-		.sprite-background(-5px, -260px);
-	}
-}
-
 #content.home {
+/*
 	#content_primary article header a {
 		background:url(http://placehold.it/820x280) no-repeat;
 		width:820px;
@@ -340,12 +373,11 @@
 		display:block;
 		text-indent:-9999px;
 	}
-	
+
 	#content_primary section, #content_primary footer {
 		display:none;
 	}
-
-
+*/	
 	#content_primary section a {
 		color:@color_off_black;
 		text-decoration:none;
@@ -367,67 +399,14 @@
 		.widget {
 			margin-bottom:0;
 		}
-	}
-}
-
-#content.single #post_footer {
-	.widget:first-child {
-		margin-left:140px;
-		width:190px;
-	}
-
-	#post_footer_post_of_week, #post_footer_tumblr_follow, #post_footer_off_franklin_promo {
-
-		height:90px;
-		width:190px;
-		position:relative;
-		.content {
-			width:170px;
-			position:absolute;
-			bottom:0;
-			display:block;
-			padding:5px 10px 10px 10px;
-			color:@color_highlight;
-			background: rgba(93,80,79,.85);
-
-			.header {
-				display:block;
-				font-size:14px;
-				font-family:@sans-serif;
-			}
-
-			.caption {
-				margin-top:2px;
-				display:block;
-				font-size:11px;
-				font-family:@serif;
-				font-style:italic;
-			}
+		.widget:first-child {
+			margin-left:140px;
+			width:190px;
 		}
 	}
-	
-	#post_footer_post_of_week {
-		background-image:url(../../images/promos.png); 
-		background-position:-200px 0px; 
-		background-repeat:no-repeat;
-	}
-
-	#post_footer_tumblr_follow {
-		background-image:url(../../images/promos.png);
-		background-position: -400px 0px;
-		background-repeat: no-repeat;
-	}
-
-	#post_footer_off_franklin_promo {
-		background-image:url(../../images/promos.png);
-		background-position:0px 0px;
-		background-repeat:no-repeat;
-	}
 }
 
-
-#page_footer {
-
+#sidebar {
 	.widget {
 		ul {
 			li {
@@ -435,16 +414,238 @@
 			}
 		}
 	}
+}
+
+#page_footer {
+	/*text-shadow: rgba(0,0,0,.5) 1px 1px .5px;*/
+	.widget {
+		ul {
+			list-style:decimal;
+			li {
+				margin-left:0;
+			}
+		}
+	}
+}
+
+#page_heel {
+	.widget {
+		margin-bottom:1px;
+		ul {
+			li {
+				margin-left:0;
+			}
+		}
+	}
+}
+
+#sticky_footer
+{
+	.widget {
+		margin-bottom:0;
+		padding:0;
+	}
+}
+
+#sticky_footer.light {
+	/*first-timer*/
+	#text-9 {
+		a {
+			color:@color_highlight;
+		}
+	}
+}
+
+
+
+
+
+/*subheader site description*/
+#text-3 {
+	font-size:12px;
+	line-height:row-height;
+	#subheader_webbynode_promo {
+		display:block;
+		width:100px;
+		height:20px;
+		text-indent:-9999px;
+		.sprite-background(-5px, -260px);
+	}
+}
+
+/*subheader rss promo button*/
+#text-5 {
+	#rss_promo {
+	 /* basic */
+	 cursor:pointer;
+	 padding:0;
+	 display:block;
+	 background-color: @color_highlight;
+	 margin: 0 auto;
+	 width: 190px;
+	 height: 70px;
+	 text-decoration:none;
+	 font-size:12px;
+
+		#rss_promo_top {
+		 display:block;
+		 height:50px;
+		 background:@color_midtone;
+		 color:@color_highlight;
+
+			.content {
+
+			 .iconic {
+			 	font-size:44px;
+			 	display:block;
+				 float:left;
+				line-height:36px;
+				margin-top:10px;
+				margin-left:10px;
+				margin-right:5px;
+				font-style:normal;
+				font-weight:normal;
+			}
+			 margin-right:20px;
+			 padding-top:10px;
+				strong {
+				 margin-top:5px;
+				 display:block;
+				 float:left;
+				 font-weight:normal;
+				 font-size:20px;
+				 line-height:21px;
+				 margin-bottom:5px;
+				 font-family:@serif;
+				 font-style:italic;
+					span {
+						display:block;
+						font-size:12px;
+					}
+				}
+			}
+
+		}
+
+		#rss_promo_bottom {
+		 display:block;
+		 height:20px;
+		 background:@color_highlight;
+		 color:@color_midtone;
+			.content {
+			 display:block; 
+			 margin-left:50px;
+			font-family:@sans-serif;
+			 font-style:normal;
+			 padding-top:3px;
+			 font-weight:500;
+			 line-height:@row-height;
+			}
+		}
+	}
+}
+
+/*subheader influads*/
+#text-6 {
 	
-	/*suggestion-box*/
-	#text-23 {
-		p {
-			font-size:22px;
-			line-height:30px;
+}
+
+/*sidebar popular posts*/
+#wpp-4 {
+	width:auto;
+}
+
+/*sidebar related posts*/
+#yarpp_widget-3 {
+	width:auto;
+}
+
+/*sidebar recent posts*/
+#rss-3 {
+	.widget_rss {
+		.widgettitle {
+			img {
+				display:none;
+			}
+			a {
+				text-decoration:none;
+				border:none !important;
+				color:@color_off_black;
+			}
+		}
+		ul {
+			list-style:decimal;
+			li {
+				margin-left:3px;
+			}
+		}
+	}
+}
+
+/*sidebar category*/
+#text-21 {
+	width:auto;
+}
+
+/*sidebar tags*/
+#text-22 {
+	width:auto;
+}
+
+/*post footer global elements*/
+#post_footer_post_of_week, #post_footer_tumblr_follow, #post_footer_off_franklin_promo {
+	height:90px;
+	width:190px;
+	position:relative;
+	.content {
+		width:170px;
+		position:absolute;
+		bottom:0;
+		display:block;
+		padding:5px 10px 10px 10px;
+		color:@color_highlight;
+		background: rgba(93,80,79,.85);
+
+		.header {
+			display:block;
+			font-size:14px;
+			font-family:@sans-serif;
+		}
+
+		.caption {
+			margin-top:2px;
+			display:block;
+			font-size:11px;
+			font-family:@serif;
 			font-style:italic;
 		}
 	}
+}
 
+/*post footer post of the week*/
+#post_footer_post_of_week {
+	background-image:url(../../images/promos.png); 
+	background-position:-200px 0px; 
+	background-repeat:no-repeat;
+}
+
+/*post footer off franklin promo*/
+#post_footer_tumblr_follow {
+	background-image:url(../../images/promos.png);
+	background-position: -400px 0px;
+	background-repeat: no-repeat;
+}
+
+/*post footer tumblr follow*/
+#post_footer_off_franklin_promo {
+	background-image:url(../../images/promos.png);
+	background-position:0px 0px;
+	background-repeat:no-repeat;
+}
+
+/*footer promo area*/
+#text-10 {
+	margin-top:(@row-height*-2);
 	#footer_main_promo {
 		width:330px;
 		height:180px;
@@ -471,65 +672,88 @@
 			}
 		}
 	}
+}
 
-	#text-6 {
-		margin-top:(@row-height*-2);
+/*footer popular posts*/
+#wpp-3 {
+	width:auto;
+}
+
+/*footer recommended*/
+#text-12 {
+	width:auto;
+}
+
+/*footer topics*/
+#text-13 {
+	width:auto;
+}
+
+/*footer improvement suggestions*/
+#text-14 {
+	p {
+		font-size:22px;
+		line-height:30px;
+		font-style:italic;
 	}
-	
-	/*submit to SRD*/
-	#text-7 {
-		#footer_submit_options {
+}
+
+/*footer submit*/
+#text-15 {
+	#footer_submit_options {
+		.reset-dimensions;
+		margin-top:15px;
+		list-style:none;
+		li.design, li.web, li.motion {
 			.reset-dimensions;
-			margin-top:15px;
-			list-style:none;
-			li.design, li.web, li.motion {
-				.reset-dimensions;
-				float:left;
-				margin-right:20px;
-				text-align:center;
-				a {
-					display:block;
-					width:50px;
-					height:39px;
-					text-indent:-9999px;
-				}
-				span {
-					display:block;
-					margin-top:1px;
-				}
+			float:left;
+			margin-right:20px;
+			text-align:center;
+			a {
+				display:block;
+				width:50px;
+				height:39px;
+				text-indent:-9999px;
 			}
-
-			li.design a {
-				.sprite-background(-5px, -150px);
-			}
-
-			li.web a {
-				.sprite-background(-60px, -150px);
-			}
-
-			li.motion a {
-				.sprite-background(-115px, -150px);
-			}
-			li.last {
-				margin-right:0;
+			span {
+				display:block;
+				margin-top:1px;
 			}
 		}
-		a.button {
-			font-size:14px;
-			padding:6px 10px 6px 10px;
+
+		li.design a {
+			.sprite-background(-5px, -150px);
+		}
+
+		li.web a {
+			.sprite-background(-60px, -150px);
+		}
+
+		li.motion a {
+			.sprite-background(-115px, -150px);
+		}
+		li.last {
+			margin-right:0;
 		}
 	}
-	
-	/*Download Franklin Street*/
-	#text-8 {
-		a.button {
-			font-size:14px;
-			padding:6px 10px 6px 10px;
-			margin-top:@row-height;
-			
-		}
+	a.button {
+		font-size:14px;
+		padding:6px 10px 6px 10px;
 	}
-	
+}
+
+/*footer download franklin street*/
+#text-16 {
+	a.button {
+		font-size:14px;
+		padding:6px 10px 6px 10px;
+		margin-top:@row-height;
+		
+	}
+}
+
+/*footer follow*/
+#text-17 {
 	#footer_follow_list {
 		.reset-dimensions;
 		margin-top:@row-height;
@@ -591,44 +815,40 @@
 			margin-bottom:0;
 		}
 	}
-	
-	.widget {
-		ul {
-			list-style:decimal;
-		}
+}
+
+/*heel secondary menu*/
+#nav_menu-3 {
+	ul {
+		list-style:none;
+		.reset-dimensions;
+	}
+	li {
+		.reset-dimensions;
+		margin-right:10px;
+		float:left;
+	}
+	li:last-child {
+		margin-right:0px;
 	}
 }
 
-#page_heel {
-	.widget {
-		margin-bottom:1px;
-		ul {
-			li {
-				margin-left:0;
-			}
-		}
-	}
-}
-
-#sticky_footer
-{
-	.widget {
-		margin-bottom:0;
-		padding:0;
-	}
-	
-	#sticky_footer_twitter_follow, #sticky_footer_rss_follow {
-		font-size:12px;
-		font-weight:bold;
-		text-decoration:none;
+/*sticky footer common*/
+#sticky_footer_twitter_follow, #sticky_footer_rss_follow {
+	font-size:12px;
+	font-weight:bold;
+	text-decoration:none;
+	display:block;
+	padding:5px 0 2px 0;
+	span {
 		display:block;
-		padding:5px 0 2px 0;
-		span {
-			display:block;
-			float:left;
-			margin-right:10px;
-		}
-	} 
+		float:left;
+		margin-right:10px;
+	}
+} 
+
+/*sticky footer twitter*/
+#text-7 {
 	#sticky_footer_twitter_follow {
 		span {
 			width:9px;
@@ -636,7 +856,10 @@
 			.sprite-background(-5px, -5px);
 		}
 	}
-	
+}
+
+/*sticky footer rss*/
+#text-8 {
 	#sticky_footer_rss_follow {	
 		span {
 			width:12px;
@@ -644,131 +867,23 @@
 			.sprite-background(-28px, -5px);
 		}
 	}
-	
-	/*first-timer*/
-	#text-22 {
-		margin:0;
-		.columns(6);
-		float:right;
-		a {
-			.user {
-				font-size:15px;
-			}
-			font-weight:bold;
-			padding:5px 0 2px 10px;
-			display:block;
-			background-color:@color_accent;
-			text-decoration:none;
-			font-size:12px;
-			color:@color_highlight;
-		}
-	}
 }
 
-#sticky_footer.light {
-	/*first-timer*/
-	#text-22 {
-		a {
-			color:@color_highlight;
+/*sticky footer first timer*/
+#text-9.widget {
+	margin:0;
+	.columns(6);
+	float:right;
+	a {
+		.user {
+			font-size:15px;
 		}
-	}
-}
-
-#sidebar {
-	.widget {
-		ul {
-			li {
-				margin-left:0;
-			}
-		}
-	}
-	.widget_rss {
-		.widgettitle {
-			img {
-				display:none;
-			}
-			a {
-				text-decoration:none;
-				border:none !important;
-				color:@color_off_black;
-			}
-		}
-		ul {
-			list-style:decimal;
-			li {
-				margin-left:3px;
-			}
-		}
-	}
-}
-
-
-
-#rss_promo {
- /* basic */
- cursor:pointer;
- padding:0;
- display:block;
- background-color: @color_highlight;
- margin: 0 auto;
- width: 190px;
- height: 70px;
- text-decoration:none;
- font-size:12px;
-
-	#rss_promo_top {
-	 display:block;
-	 height:50px;
-	 background:@color_midtone;
-	 color:@color_highlight;
-		
-		.content {
-		 
-		 .iconic {
-		 	font-size:44px;
-		 	display:block;
-			 float:left;
-			line-height:36px;
-			margin-top:10px;
-			margin-left:10px;
-			margin-right:5px;
-			font-style:normal;
-			font-weight:normal;
-		}
-		 margin-right:20px;
-		 padding-top:10px;
-			strong {
-			 margin-top:5px;
-			 display:block;
-			 float:left;
-			 font-weight:normal;
-			 font-size:20px;
-			 line-height:21px;
-			 margin-bottom:5px;
-			 font-family:@serif;
-			 font-style:italic;
-				span {
-					display:block;
-					font-size:12px;
-				}
-			}
-		}
-	
-	}
-	
-	#rss_promo_bottom {
-	 display:block;
-	 height:20px;
-	 background:@color_highlight;
-	 color:@color_midtone;
-		.content {
-		 display:block; 
-		 margin-left:50px;
-		font-family:@sans-serif;
-		 font-style:normal;
-		 padding-top:3px;
-		 font-weight:500;
-		 line-height:@row-height;
-		}
+		font-weight:bold;
+		padding:5px 0 2px 10px;
+		display:block;
+		background-color:@color_accent;
+		text-decoration:none;
+		font-size:12px;
+		color:@color_highlight;
 	}
 }
