--- a/stylesheets/less/transitions.less
+++ b/stylesheets/less/transitions.less
@@ -38,6 +38,8 @@
 
 #comments_ajax {
 	-webkit-transition: all 1s cubic-bezier(0.02, 0, 0.18, 1.0); 
+	-moz-transition: all 1s cubic-bezier(0.02, 0, 0.18, 1.0);
+	-o-transition: all 1s cubic-bezier(0.02, 0, 0.18, 1.0);
 }
 
 #categories_pullout {
