--- a/stylesheets/css/comments.css
+++ b/stylesheets/css/comments.css
@@ -5,7 +5,7 @@
 #comments_container header h1{margin-bottom:0;}
 #comments_container header h2{margin-top:0;}
 #comments_container #comments{margin:0;padding:0;margin-bottom:15px;}#comments_container #comments .metadata{margin-bottom:5px;font-size:11px;margin-top:15px;}
-#comments_container #comments .copy{margin-top:2px;font-family:'ff-meta-serif-web-pro-1','ff-meta-serif-web-pro-2',Georgia,"Times New Roman",Times,serif;}#comments_container #comments .copy p{font-size:13px;line-height:15px;}
+#comments_container #comments .copy{margin-top:2px;font-family:"adrianne-1","adrianne-2",'ff-meta-serif-web-pro-1','ff-meta-serif-web-pro-2',Georgia,"Times New Roman",Times,serif;}#comments_container #comments .copy p{font-size:13px;line-height:15px;}
 #comments_container #comments .copy p:first-child{padding-top:0;}
 #comments_container #comments .copy blockquote,#comments_container #comments .copy blockquote p{font-size:13px;}
 #comments_container #comments li{margin:0;padding:0;margin-bottom:15px;}
