--- a/stylesheets/less/grid.less
+++ b/stylesheets/less/grid.less
@@ -16,6 +16,13 @@ div.span-1,div.span-2,div.span-3,div.span-4,div.span-5,div.span-6,div.span-7,div
 
 div.last { margin-right: 0; }
 
+section.span-1,section.span-2,section.span-3,section.span-4,section.span-5,section.span-6,section.span-7,section.span-8,section.span-9,section.span-10,section.span-11,section.span-12,section.span-13,section.span-14 {
+	float: left;
+	margin-right: @gutter-width;
+}
+
+section.last { margin-right: 0; }
+
 .span-1 { width: @column-width; }
 .span-2 { width: (@column-width*2) + @gutter-width; }
 .span-3 { width: (@column-width*3) + (@gutter-width*2); }
