Minor refactoring and massive cleanups

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
 Theme Name: Franklin Street (Public Release)
 Theme URI: http://www.somerandomdude.com/projects/franklinstreet
-Description: Franklin Street is the core theme used at SomeRandomDude.com. It is an extremely minimal theme - which keeps it open for visual customization.
+Description: Franklin Street is the core theme used at somerandomdude.com. It is an extremely minimal theme - which keeps it open for visual customization.
 Version: 2.0
 Author: P.J. Onori
 Author URI: http://www.somerandomdude.com/
-Tags: light, two-columns, fixed-width, sticky-post, theme-options
+Tags: light, two-columns, fixed-width, theme-options
 
 
 The MIT License
