--- a/stylesheets/css/iconic.css
+++ b/stylesheets/css/iconic.css
@@ -3,7 +3,7 @@
 	src: url("../../fonts/iconic_stroke.eot");
 	src: local('IconicStroke'),
 		url("../../fonts/iconic_stroke.svg#iconic") format('svg'),
-		url("../../fonts/iconic_stroke.otf") format('opentype');	   
+		url("../../fonts/iconic_stroke.ttf") format('truetype');	   
 }
 
 .iconic {
