--- a/stylesheets/less/variables.less
+++ b/stylesheets/less/variables.less
@@ -47,7 +47,7 @@
 }
 
 .sprite-background(@x:0px, @y:0px) {
-	background-image:url(../../images/fs_sprite.png);
+	background-image:url(../../images/sprite.png);
 	background-position: @x @y;
 	background-repeat: no-repeat;
 }
